Remove support for the V1 namespace classes and include a helper to transition from the previous version.

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
         "sort-packages": true
     },
     "autoload": {
-        "files": [ "src/deprecated.php" ],
+        "files": [
+            "src/migrate.php"
+        ],
         "psr-4": {
             "SnelstartPHP\\": "src/"
         }
